@@ -109,6 +109,16 @@
           <input type="text" class="form-control" [(ngModel)]="consigneequantity" placeholder="Consignee Quantity"
             [disabled]="nocusterr" />
         </div>
+        <div class="col-md-4 col-sm-12 mb-3">
+          <label class="m-0">Consignee GST</label>
+          <input type="text" class="form-control" [(ngModel)]="consigneegst" placeholder="Consignee GST"
+            [disabled]="nocusterr" />
+        </div>
+        <div class="col-md-8 col-sm-12 mb-3">
+          <label class="m-0">Delivery Address</label>
+          <input type="text" class="form-control" [(ngModel)]="deliveryaddress" placeholder="Delivery Address"
+            [disabled]="nocusterr" />
+        </div>
         <div class="col-md-12 col-sm-12 mb-3">
           <button class="btn btn-sm btn-info" [disabled]="
               nocusterr ||
