@@ -113,8 +113,8 @@
             [disabled]="nocusterr" />
         </div>
         <div class="col-md-4 col-sm-12 mb-3">
-          <label class="m-0">Delivery Contact Person</label>
-          <input type="text" class="form-control" [(ngModel)]="deliveryperson" placeholder="Delivery Contact Person"
+          <label class="m-0">Consignee GST</label>
+          <input type="text" class="form-control" [(ngModel)]="consigneegst" placeholder="Consignee GST"
             [disabled]="nocusterr" />
         </div>
         <div class="col-md-8 col-sm-12 mb-3">
